Changed how the yarn ball animation works on mobile to make sure it is readable

--- a/css/layout.css
+++ b/css/layout.css
@@ -71,8 +71,9 @@ header nav button {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 4;
+    z-index: 0;
     pointer-events: none;
+    overflow: hidden;
 }
 
 .yarn-path-desktop {display: none;}
@@ -83,7 +84,7 @@ header nav button {
     left: 0;
     width: 100px;
     height: 100px;
-    z-index: 2;
+    z-index: 4;
     pointer-events: none;
     will-change: transform;
 }
@@ -475,6 +476,7 @@ footer nav a {
     .yarn-ball {
         width: 15vw;
         height: 15vw;
+        z-index: 2;
     }
 
     footer {
@@ -485,6 +487,7 @@ footer nav a {
     .yarn-path-container {
         left: -12vw;
         width: 100vw;
+        z-index: 4;
     }
 
     .yarn-path-mobile {display: none;}
